ORC-1227: Use `Constructor.newInstance` instead of `Class.newInstance`
### What changes were proposed in this pull request?
This PR aims to use `Constructor.newInstance` instead of `Class.newInstance`.

### Why are the changes needed?
`Class.newInstance` is deprecated at Java 9.

### How was this patch tested?
Pass the CIs.

Closes #1195 from williamhyun/getdeclaredconstructor.

Authored-by: William Hyun <william@apache.org>
Signed-off-by: William Hyun <william@apache.org>